@@ -7,12 +7,13 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
@@ -26,7 +27,16 @@ public class SecurityConfig {
     @Bean
     public UserDetailsService userDetailsService() {
         return username -> repository.findByEmail(username)
-                .map(u -> new User(u.getEmail(), u.getPassword(), Collections.emptyList()))
+                .map(u -> {
+                    if (u.getPassword() == null) {
+                        throw new UsernameNotFoundException("La cuenta usa login social");
+                    }
+                    return new User(
+                            u.getEmail(),
+                            u.getPassword(),
+                            List.of(new SimpleGrantedAuthority(u.getRol().name()))
+                    );
+                })
                 .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado"));
     }
 
